--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-slayyyy!!! 
+<!DOCTYPE html> 
+<html> 
+    <head> 
+        <title> Marielle Pappaterra </title>
+    </head>
+    <body> 
+
+
+
+    </body>
+
+
+
+
+</html>
