--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html> 
 <html> 
     <head> 
-        <title> Marielle Pappaterra </title>
+    <title> Marielle Pappaterra </title>
     </head>
-    <body> 
+    <body>
+    <li> 
+        <button> MENU </button>
+        <menu>
+            <li> <a href="">About Me</a></li>
+            <li> <a herf="">Mediums</a></li>
+            <li> <a herf="">Process Photos</a></li>
+            <li> <a herf="">Contact Me</a></li>
+        </menu>
+    </li>
 
-
+    <button Style="border-radius: 50%;font-size: 40; margin: 4px 2px;padding: 20px;display: inline-block;">About Me</button>
+    <button Style="border-radius: 50%;font-size: 40; margin: 4px 2px;padding: 20px;display: inline-block;">Mediums</button>
+    <button Style="border-radius: 50%;font-size: 40; margin: 4px 2px;padding: 20px;display: inline-block;">Process Photos</button>
+    <button Style="border-radius: 50%;font-size: 40; margin: 4px 2px;padding: 20px;display: inline-block;">Contact Me</button>
+    <button><img src="https://www.shareicon.net/data/32x32/2015/08/26/90973_twitter_512x512.png"></button>
+    <button><img src="https://www.shareicon.net/data/32x32/2017/05/22/886191_social-media_512x512.png"></button>
 
     </body>
+    
+
+
+
+    
 
 
 
