--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <button>Process Photos</button>
                 </li>
                 <li class="contact-me">
-                    <button>Contact Me</button>
+                    <button><a href="assets/pages/index.html">Contact Me</a></button>
                 </li>
            </menu>     
         </nav>
