--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
                 </li>
                 <li class="mediums">
                     <button>Mediums</button>
-                    <svg width="20px" height="20px" viewBox="0 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#000000"/>
-                        </svg>
+                        <svg width="20px" height="20px" viewBox="0 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#000000"/>
+                            </svg>
                      <menu class="dropdown">
-                       <li><a href="">Drawings</a></li>
-                       <li><a href="">Painting</a></li>
+                       <li><a href="pages/drawing/index.html">Drawings</a></li>
+                       <li><a href="">Paintings</a></li>
                        <li><a href="">Print Making</a></li>
                        <li><a href="">Animation</a></li>
                    </menu>
                 </li>
                 <li class="process-photos">
-                    <button>Process Photos</button>
+                    <button><a href="pages/process-photos/index.html">Process Photos</a></button>
                 </li>
                 <li class="contact-me">
-                    <button><a href="assets/pages/index.html">Contact Me</a></button>
+                    <button><a href="pages/contact-me/index.html">Contact Me</a></button>
                 </li>
            </menu>     
         </nav>
@@ -68,7 +68,9 @@
             <h1>Marielle Pappaterra</h1>
             <h2>2002</h2>
             <img id="self-portrait" src="assets/imgs/photo.png" width="500px" alt="Self Portrait">
-            <p>Biography</p>
+            <p class="biography">While I decided to major in Sociology at The College of New Jersey (TCNJ), I also minored in Fine Arts because I always had an affinity for the arts. 
+                As a child, I took classes in drawing, pottery, painting, and sculpture. I love how it became an outlet for me to expand my creative thinking and explore new ways to express different emotions. 
+                I was able to enhance my techniques and try new materials while studying at TCNJ. </p>
         </section>
 
 <!-- FOOTER -->
