--- a/pages/process-photos/index.html
+++ b/pages/process-photos/index.html
@@ -2,11 +2,11 @@
 <html>
     <head> 
 <!-- WILL NOT APPEAR ON WEBSITE -->
-                <title>Contact Me</title>
+                <title>Process Photos</title>
 <!-- VIEWPORT -->
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- STYLES -->
-                <link rel="stylesheet" href="../styles/styles.css">
+                <link rel="stylesheet" href="../../assets/styles/styles.css">
 <!-- FONT FOR MALI -->
                 <link rel="preconnect" href="https://fonts.googleapis.com">
                     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +35,7 @@
                         </svg>
                      <menu class="dropdown">
                        <li><a href="">Drawings</a></li>
-                       <li><a href="">Painting</a></li>
+                       <li><a href="">Paintings</a></li>
                        <li><a href="">Print Making</a></li>
                        <li><a href="">Animation</a></li>
                    </menu>
@@ -44,9 +44,12 @@
                     <button>Process Photos</button>
                 </li>
                 <li class="contact-me">
-                    <button>Contact Me</button>
+                    <button><a href="../contact-me/index.html">Contact Me</a></button>
                 </li>
            </menu>     
         </nav>
+        <section>
+            <h1 id="process-photos">Process Photos</h1>
+        </section>
     </body>
 </html>
