--- a/pages/print-making/index.html
+++ b/pages/print-making/index.html
@@ -2,7 +2,7 @@
 <html>
     <head> 
 <!-- WILL NOT APPEAR ON WEBSITE -->
-                <title>Process Photos</title>
+                <title>Print Making</title>
 <!-- VIEWPORT -->
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- STYLES -->
@@ -49,7 +49,7 @@
            </menu>     
         </nav>
         <section>
-            <h1 id="process-photos">Process Photos</h1>
+            <h1 id="printing">Print Making</h1>
         </section>
         <section id="footer">
             <a href="https://www.instagram.com/marielles.arts/">
