--- a/pages/paintings/index.html
+++ b/pages/paintings/index.html
@@ -6,7 +6,7 @@
 <!-- VIEWPORT -->
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- STYLES -->
-                <link rel="stylesheet" href="../../assets/styles/styles.css">
+                <link rel="stylesheet" href="../../assets/css/styles.css">
 <!-- FONT FOR MALI -->
                 <link rel="preconnect" href="https://fonts.googleapis.com">
                     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,30 +26,39 @@
         <nav>
             <menu id="main-menu">
                 <li class="about-me">
-                    <button><a href="../../index.html">About Me</a></button>
+                    <button><a class="about" href="../../index.html">About Me</a></button>
                 </li>
                 <li class="mediums">
-                    <button>Mediums</button>
+                    <button class="med">Mediums</button>
                     <svg width="20px" height="20px" viewBox="0 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#000000"/>
                         </svg>
-                     <menu class="dropdown">
-                       <li><a href="../drawing/index.html">Drawings</a></li>
-                       <li><a href="">Paintings</a></li>
-                       <li><a href="">Print Making</a></li>
-                       <li><a href="">Animation</a></li>
+                    <menu class="dropdown">
+                       <a class="draw" href="../drawing/index.html">Drawings</a>
+                       <a class="paint" href="../paintings/index.html">Paintings</a>
+                       <a class="print" href="../print-making/index.html">Print Making</a>
+                       <a class="anim" href="../animation/index.html">Animations</a>
                    </menu>
                 </li>
                 <li class="process-photos">
-                    <button><a href="../process-photos/index.html">Process Photos</a></button>
+                    <button><a class="proc" href="../process-photos/index.html">Process Photos</a></button>
                 </li>
                 <li class="contact-me">
-                    <button><a href="../contact-me/index.html">Contact Me</a></button>
+                    <button><a class="cont" href="../contact-me/index.html">Contact Me</a></button>
                 </li>
            </menu>     
         </nav>
         <section>
             <h1 id="paintings">Paintings</h1>
+        </section>
+        <section id="footer">
+            <a href="https://www.instagram.com/marielles.arts/">
+                <img class="instagram-icon" src="../../assets/imgs/instagram-icon.svg" width="50px" alt="Instagram-Icon (click on the icon to take you to that page)" on>
+            </a>
+                <div class= "divider"></div>
+            <a href="https://www.linkedin.com/in/mpappaterra/">
+                <img class="linkedin-icon" src="../../assets/imgs/linkedin-icon.svg" width="45px" alt="LinkedIn-icon (click on the icon to take you to that page)">
+            </a>
         </section>
     </body>
 </html>
