--- a/pages/process-photos/index.html
+++ b/pages/process-photos/index.html
@@ -48,9 +48,12 @@
                 </li>
            </menu>     
         </nav>
+<!-- PROCESS PHOTOS PAGE -->
         <section>
             <h1 id="process-photos">Process Photos</h1>
         </section>
+            <br><br>
+<!-- FOOTER -->
         <section id="footer">
             <a href="https://www.instagram.com/marielles.arts/">
                 <img class="instagram-icon" src="../../assets/imgs/instagram-icon.svg" width="50px" alt="Instagram-Icon (click on the icon to take you to that page)" on>
