--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
         <section id="layout">
             <h1>Marielle Pappaterra</h1>
             <h2>2002</h2>
-            <img id="self-portrait" src="assets/imgs/photo.png" width="550px" alt="Self Portrait">
+            <div class="bio-photo">
+                <img id="self-portrait" src="assets/imgs/self-portrait.png" width="575px" alt="Self Portrait">
+            </div>
             <p class="biography" >While I decided to major in Sociology at The College of New Jersey (TCNJ), I also minored in Fine Arts because I always had an affinity for the arts. As a child, 
                 I took classes in drawing, pottery, painting, and sculpture. I love how it became an outlet for me to expand my creative thinking and explore new ways to express different emotions. 
                 I was able to enhance my techniques and try new materials while studying at TCNJ.</p>
@@ -77,7 +79,7 @@
             </p>
 
         </section>
-
+            <br><br>
 <!-- FOOTER -->
         <section id="footer">
             <a href="https://www.instagram.com/marielles.arts/">
