--- a/pages/animation/index.html
+++ b/pages/animation/index.html
@@ -48,9 +48,31 @@
                 </li>
            </menu>     
         </nav>
+<!-- ANIMATIONS PAGE -->
         <section>
             <h1 id="animations">Animations</h1>
+            <div class="animation-grid">
+                <div class="grid-animate"><video width="300px" controls><source class="boil-23" src="animation-imgs/boil-2023.mp4" type="video/mp4" alt="Boil animation of a flower - done in ink."></video><p class="animate-desc"><b>Flower Boil</b> (2023) - Ink on paper</p></div>
+                <div class="grid-animate"><video width="600px" controls><source class="destruct-23" src="animation-imgs/destructive-2023.mp4" type="video/mp4" alt="Destructive animation of coffee droplets falling into a puddle, then it turns into a cup, and more coffee drips into the cup."></video><p class="animate-desc"><b>Destructive Animation</b> (2023) - Charcoal on paper</p></div>
+<!-- EXTTRA DIVS
+            <div class="animation-grid">
+                    ORIGIONAL CODE
+                        <div class="grid-animate"><video class="boil-23" src="animation-imgs/boil-2023.mp4" type="video/mp4" alt="Boil animation of a flower - done in ink." width="300px"></div>
+                        <div class="grid-animate"><video class="destruct-23" src="animation-imgs/destructive-2023.mp4" type="video/mp4" alt="Destructive animation of coffee droplets falling into a puddle, then it turns into a cup, and more coffee drips into the cup." width="600px"></div>
+                <div class="grid-animate"><video width="px" controls><source class="boil-23" src="" type="video/mp4" alt=""></video><p class="animate-desc"></p></div>
+                <div class="grid-animate">3</div>
+                <div class="grid-animate">4</div>
+                <div class="grid-animate">5</div>
+                <div class="grid-animate">6</div>
+                <div class="grid-animate">7</div>
+                <div class="grid-animate">8</div>
+                <div class="grid-animate">9</div>
+            </div>
+-->
+              </div>
         </section>
+            <br><br>
+<!-- FOOTER -->
         <section id="footer">
             <a href="https://www.instagram.com/marielles.arts/">
                 <img class="instagram-icon" src="../../assets/imgs/instagram-icon.svg" width="50px" alt="Instagram-Icon (click on the icon to take you to that page)" on>
