--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 I took classes in drawing, pottery, painting, and sculpture. I love how it became an outlet for me to expand my creative thinking and explore new ways to express different emotions. 
                 I was able to enhance my techniques and try new materials while studying at TCNJ.</p>
             <p class="bio2">
-                In my drawing classes, I used various forms of lead, charcoal, and ink. I improved my perspective drawing and finetuned how I developed concepts. In my painting classes, I was 
-                introduced to oil paints - I experimented with different application methods and how the medium interacts with other materials (like acrylic, denim, and glass).
+                In my drawing classes, I used various forms of lead, charcoal, and ink. I improved my perspective in drawing and fine-tuned how I developed concepts. In my painting classes, I was
+                introduced to oil paints. I experimented with different application methods and how each medium interacts with other materials (like acrylic, denim, and glass).
             </p>
 
         </section>
@@ -83,7 +83,7 @@
 <!-- FOOTER -->
         <section id="footer">
             <a href="https://www.instagram.com/marielles.arts/">
-                <img class="instagram-icon" src="assets/imgs/instagram-icon.svg" width="50px" alt="Instagram-Icon (click on the icon to take you to that page)" on>
+                <img class="instagram-icon" src="assets/imgs/instagram-icon.svg" width="50px" alt="Instagram-Icon (click on the icon to take you to that page)">
             </a>
                 <div class= "divider"></div>
             <a href="https://www.linkedin.com/in/mpappaterra/">
