--- a/pages/contact-me/index.html
+++ b/pages/contact-me/index.html
@@ -50,7 +50,8 @@
         </nav>
 <!-- CONTACT ME PAGE -->
         <section id="contact">
-            <h1 id="information">Contact ME!</h1>
+            <h1 class="information">Contact ME!</h1>
+            <p class="info"><b>E-mail:</b><a class="email" href="mailto:20mterra@gmail.com ?subject=Artist Website Query">20mterra@gmail.com</a></p>
         </section>
             <br><br>
 <!-- FOOTER -->
