--- a/pages/animation/index.html
+++ b/pages/animation/index.html
@@ -76,11 +76,11 @@
 <!-- FOOTER -->
         <section id="footer">
             <a href="https://www.instagram.com/marielles.arts/">
-                <img class="instagram-icon" src="../../assets/imgs/instagram-icon.svg" width="50px" alt="Instagram-Icon (click on the icon to take you to that page)" on>
+                <img class="instagram-icon" src="../../assets/imgs/instagram-icon.svg" width="50px" alt="Instagram-Icon (click on the icon to take you to that page)." on>
             </a>
                 <div class= "divider"></div>
             <a href="https://www.linkedin.com/in/mpappaterra/">
-                <img class="linkedin-icon" src="../../assets/imgs/linkedin-icon.svg" width="45px" alt="LinkedIn-icon (click on the icon to take you to that page)">
+                <img class="linkedin-icon" src="../../assets/imgs/linkedin-icon.svg" width="45px" alt="LinkedIn-icon (click on the icon to take you to that page).">
             </a>
         </section>
     </body>
