--- a/pages/print-making/index.html
+++ b/pages/print-making/index.html
@@ -51,6 +51,36 @@
 <!-- PRINT MAKING PAGE -->
         <section>
             <h1 id="printing">Print Making</h1>
+            <p class="print-project1"><b>Project 1 </b>(2023)</p>
+                <p class="print-project-desc1">Made stamps by carving out my images onto speedy carve. Then, I used various inks and applied them to the stamps. Finally, I stamped the inked stamps onto 16x16 and 3x4 prtint-making paper.</p>
+            <div class="print1-grid">
+                <div class="grid-print1"><img src="prints/print1-1.png" width="510px" alt=""><p class="print-desc"><b>Symmetry Stamp 1 </b><br>16x16</p></div>
+                <div class="grid-print1"><img src="prints/print1-2.png" width="510px" alt=""><p class="print-desc"><b>Symmetry Stamp 2 </b><br>16x16</p></div>
+                <div class="grid-print1"><img src="prints/print1-3.png" width="510px" alt=""><p class="print-desc"><b>Symmetry Stamp  3</b><br>16x16</p></div>
+                <div class="grid-print1"><img src="prints/print1-4.png" width="510px" alt=""><p class="print-desc"><b>Symmetry Stamp 4 </b><br>16x16</p></div>
+                <div class="grid-print1"><img src="prints/print1-5.png" width="510px" alt="Lotus flowers in varous colors (pink, red, and purple) sitting ontop of green lily pads."><p class="print-desc"><b>Post Card 1 </b><br>4x3</p></div>
+                <div class="grid-print1"><img src="prints/print1-6.png" width="510px" alt="Three pink lotus flowers sitting ontop of their own green lily pads. There are also bubbles floating above the flowers."><p class="print-desc"><b>Post Card 2 </b><br>4x3</p></div>
+                <div class="grid-print1"><img src="prints/print1-7.png" width="510px" alt="A single pink lotus flower sitting ontop of a green lily pad. There are also bubbles floating above the flower."><p class="print-desc"><b>Post Card 3 </b><br>3x4</p></div>
+                <div class="grid-print1"><img src="prints/print1-8.png" width="510px" alt="Red and green strawberries scatterd around on the postcard."><p class="print-desc"><b>Post Card 4 </b><br>3x4</p></div>
+                <div class="grid-print1"><img src="prints/print1-9.png" width="510px" alt=""><p class="print-desc"><b>Post Card 5 </b><br>3x4</p></div>
+                <div class="grid-print1"><img src="prints/print1-10.png" width="510px" alt=""><p class="print-desc"><b>Post Card 6 </b><br>4x3</p></div>
+            </div>
+            <p class="print-project2"><b>Project 2 </b>(2023)</p>
+                <p class="print-project-desc2">Carved a 12x12 block of mounted and unmounted linoleum. I gessored the area that was carved to help make cleaning off the ink easier. I inked up the linoleum using oil based printing inks and a roller. After applying the ink, I rolled it through a printing press. </p>
+            <div class="print2-grid">
+                <div class="grid-print2"><img src="prints/print2-1rainbow.png" width="500px" alt="Background is a blend of pink, blue, and purple on white paper. Ontop is a cartoon line-drawing of a habiscus flower (color: black)."><p class="print-desc"><b>Relief Print 1 </b><br>Blend Roll 1</p></div>
+                <div class="grid-print2"><img src="prints/print2-2rainbow.png" width="500px" alt="Background is a blend of blue, white, and red ontop of white paper. Ontop are bubble shapes and it takes up most of the surface area (color: white)."><p class="print-desc"><b>Relief Print 2 </b><br>Blend Roll 2</p></div>
+                <div class="grid-print2"><img src="prints/print2-3rainbow.png" width="500px" alt="Background is a blank white piece of paper. Ontop is cartoon line-drawn habiscus flower inked with a blend roll (blue, purple, and white)."><p class="print-desc"><b>Relief Print 3 </b><br>Blend Roll 3</p></div>
+                <div class="grid-print2"><img src="prints/print2-4collab.png" width="500px" alt="Otter print (color: light grey) is printed ontop of the bubble print (color: dark blue)."><p class="print-desc"><b>Relief Print 4 </b><br>Collaborative Print 1</p></div>
+                <div class="grid-print2"><img src="prints/print2-5collab.png" width="500px" alt="Cartoon line-drawn habiscus flower print (color: orange) is printed ontop of a full coverage scallop design (color: lime green and yellow)."><p class="print-desc"><b>Relief Print 5 </b><br>Collaborative Print 2 </p></div>
+                <div class="grid-print2"><img src="prints/print2-6collab.png" width="500px" alt="Cartoon line-drawn habiscus flower print (color: peach) is printed ontop of a tall grass print (color: green)."><p class="print-desc"><b>Relief Print 6 </b><br>Collaborative Print 3 </p></div>
+                <div class="grid-print2"><img src="prints/print2-7offset.png" width="500px" alt="Bubble print is printed ontop of itself three times, but it is rotated 90 degrees every time I print (color order: yellow, then magenta, then blue)."><p class="print-desc"><b>Relief Print 7 </b><br>Off-Set 1 (yellow, magenta, cyan)</p></div>
+                <div class="grid-print2"><img src="prints/print2-8offset.png" width="500px" alt="Bubble print is printed ontop of itself three times, but it is rotated 90 degrees every time I print (color order: magenta, cyan, then yellow)."><p class="print-desc"><b>Relief Print 8 </b><br>Off-Set 2 (magenta, cyan, and yellow)</p></div>
+                <div class="grid-print2"><img src="prints/print2-9offset.png" width="500px" alt="Line-drawn habiscus flower print is printed ontop of itself 3 times, but it is rotated 45 degrees every time I print (color order: yellow, cyan, then magenta)."><p class="print-desc"><b>Relief Print 9 </b><br>Off-Set 3 (yellow, cyan, magenta)</p></div>
+                <div class="grid-print2"><img src="prints/print2-10offset.png" width="500px" alt="Line-drawn habiscus flower print is printed ontop of itself 3 times, but it is rotated 45 degrees every time I print (color order: magenta, cyan, then black)."><p class="print-desc"><b>Relief Print 10 </b><br>Off-set 4 (magenta, cyan, and balack)</p></div>
+                <div class="grid-print2"><img src="prints/print2-11custom.png" width="500px" alt="Cartoon line-drawn habiscus flower print (color: peach) is printed ontop a blank white piece of paper."><p class="print-desc"><b>Relief Print 11 </b><br>Custom Color 1</p></div>
+                <div class="grid-print2"><img src="prints/print2-12custom.png" width="500px" alt="Cartoon line-drawn habiscus flower print (color: red) is printed ontop of the bubble print (color: light blue)."><p class="print-desc"><b>Relief Print 12 </b><br>Custom Color 2</p></div>
+            </div>
         </section>
             <br><br>
 <!-- FOOTER -->
