--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <!-- WILL NOT APPEAR ON WEBSITE -->
         <title> Marielle Pappaterra </title>
 <!-- VIEWPORT -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- STYLES -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- CSS STYLES -->
         <link rel="stylesheet" href="assets/css/styles.css">
 <!-- FONT FOR MALI -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,24 +44,30 @@
                 <li class="about-me">
                     <button><a class="about" href="index.html">About Me</a></button>
                 </li>
-                <li class="mediums">
-                    <button class="med">Mediums</button>
-                        <svg width="20px" height="20px" viewBox="0 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#000000"/>
-                            </svg>
-                    <div class="dropdown">
-                       <a class="draw" href="pages/drawing/index.html">Drawings</a>
-                       <a class="paint" href="pages/paintings/index.html">Paintings</a>
-                       <a class="print" href="pages/print-making/index.html">Print Making</a>
-                       <a class="anim" href="pages/animation/index.html">Animations</a>
-                     </div>
-                </li>
-                <li class="process-photos">
-                    <button><a class="proc" href="pages/process-photos/index.html">Process Photos</a></button>
-                </li>
-                <li class="contact-me">
-                    <button><a class="cont" href="pages/contact-me/index.html">Contact Me</a></button>
-                </li>
+<!-- Menu Icon -->
+            <button id="mobile-menu-button">
+                <img id="mobile-menu-icon" src="assets/images/menu.svg" width="50px">
+                <br>
+                <span id="mobile-menu-text">Menu</span>
+            </button>
+        
+<!-- Drop Down Menu -->
+                <menu id="menu" class="display-flex display-none-mobile">
+                    <li class="mediums">
+                        <button class="med">Mediums</button>
+                            <svg width="20px" height="20px" viewBox="0 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#000000"/>
+                                </svg>
+                        <div class="dropdown">
+                           <a class="paint" href="pages/paintings/index.html">Paintings</a>
+                           <a class="print" href="pages/print-making/index.html">Print Making</a>
+                           <a class="anim" href="pages/animation/index.html">Animations</a>
+                         </div>
+                    </li>
+                    <li class="contact-me">
+                        <button><a class="cont" href="pages/contact-me/index.html">Contact Me</a></button>
+                    </li>
+                </menu>
            </menu>     
         </nav>
 <!-- ABOUT ME PAGE -->
@@ -90,5 +97,10 @@
                 <img class="linkedin-icon" src="assets/imgs/linkedin-icon.svg" width="45px" alt="LinkedIn-icon (click on the icon to take you to that page)">
             </a>
         </section>
+<!-- JAVASCRIPT FILE -->
+        <script src="assets/js/script.js"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+            crossorigin="anonymous"></script>
     </body>
 </html>
