--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h1>Marielle Pappaterra</h1>
             <h2>2002</h2>
             <div class="bio-photo">
-                <img id="self-portrait" src="assets/imgs/self-portrait.png" width="575px" alt="Self Portrait">
+                <img id="self-portrait" src="assets/imgs/self-portrait.png" width="50%" alt="Self Portrait">
             </div>
             <p class="biography" >While I decided to major in Sociology at The College of New Jersey (TCNJ), I also minored in Fine Arts because I always had an affinity for the arts. As a child, 
                 I took classes in drawing, pottery, painting, and sculpture. I love how it became an outlet for me to expand my creative thinking and explore new ways to express different emotions. 
