--- a/pages/animation/index.html
+++ b/pages/animation/index.html
@@ -57,9 +57,9 @@
         <section>
             <h1 id="animations">Animations</h1>
             <div class="animation-grid">
-                <div class="grid-animate"><video width="300px" controls><source class="boil-23" src="animation-imgs/boil-2023.mp4" type="video/mp4" alt="Boil animation of a flower - done in ink."></video><p class="animate-desc"><b>Flower Boil</b> (2023)<br>Ink on paper</p></div>
-                <div class="grid-animate"><video width="600px" controls><source class="destruct-23" src="animation-imgs/destructive-2023.mp4" type="video/mp4" alt="Destructive animation of coffee droplets falling into a puddle, then it turns into a cup, and more coffee drips into the cup."></video><p class="animate-desc"><b>Destructive Animation</b> (2023)<br>Charcoal on paper</p></div>
-                <div class="grid-animate"><video width="600px" controls><source class="animation-24" src="animation-imgs/animation-2024.mp4" type="video/mp4" alt="Animation of a clemontine being peeled."></video><p class="animate-desc"><b>Animation</b> (2024)<br>Clemontine photographed whie it was being peeled</p></div>
+                <div class="grid-animate"><video width="110%" controls><source class="destruct-23" src="animation-imgs/destructive-2023.mp4" type="video/mp4" alt="Destructive animation of coffee droplets falling into a puddle, then it turns into a cup, and more coffee drips into the cup."></video><p class="animate-desc"><b>Destructive Animation</b> (2023)<br>Charcoal on paper</p></div>
+                <div class="grid-animate"><video width="110%" controls><source class="animation-24" src="animation-imgs/animation-2024.mp4" type="video/mp4" alt="Animation of a clemontine being peeled."></video><p class="animate-desc"><b>Animation</b> (2024)<br>Clemontine photographed whie it was being peeled</p></div>
+                <div class="grid-animate"><video width="85%" controls><source class="boil-23" src="animation-imgs/boil-2023.mp4" type="video/mp4" alt="Boil animation of a flower - done in ink."></video><p class="animate-desc"><b>Flower Boil</b> (2023)<br>Ink on paper</p></div>
 <!-- EXTTRA DIVS
             <div class="animation-grid">
                     ORIGIONAL CODE
