--- a/pages/contact-me/index.html
+++ b/pages/contact-me/index.html
@@ -57,6 +57,10 @@
         <section id="contact">
             <h1 class="information">Contact ME!</h1>
             <p class="info"><b>E-mail:</b><a class="email" href="mailto:20mterra@gmail.com ?subject=Artist Website Query">20mterra@gmail.com</a></p>
+            <div class="con-summary">
+                <img class="con-photo" src="imgs/contact-photo.png" width="31%" alt="Self Portrait">    
+                <p class="con-message">I'd be happy to answer any questions reguarding techniques and/or advice! If you're curious about asking if I could create a piece specifically for you, reach out with your ideas and I'd love to create something memorable ❤</p>
+            </div>
         </section>
             <br><br>
 <!-- FOOTER -->
