--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                 I was able to enhance my techniques and try new materials while studying at TCNJ.</p>
             <p class="bio2">
                 In my drawing classes, I used various forms of lead, charcoal, and ink. I improved my perspective in drawing and fine-tuned how I developed concepts. In my painting classes, I was
-                introduced to oil paints. I experimented with different application methods and how each medium interacts with other materials (like acrylic, denim, and glass).
+                introduced to oil paints. I experimented with different application methods and how each medium interacts with other materials (like acrylic, denim, and glass). In my printmaking 
+                class, I was exposed to various printing methods (like carving SpeedyCarve for stamps, carving linoleum for relif printing, screen printing, and riso printing). In addition, I have 
+                become very efficient with Adobe applications like PremierPro, Adobe Illisturate, and InDesign.
             </p>
 
         </section>
