--- a/pages/print-making/index.html
+++ b/pages/print-making/index.html
@@ -56,7 +56,7 @@
 <!-- PRINT MAKING PAGE -->
         <section>
             <h1 id="printing">Print Making</h1>
-            <p class="print-project1"><b>Project 1 </b>(2023)</p>
+            <p class="print-project1"><b>Project 1 </b>(2024)</p>
                 <p class="print-project-desc1">Made stamps by carving out my images onto speedy carve. Then, I used various inks and applied them to the stamps. Finally, I stamped the inked stamps onto 16x16 and 3x4 prtint-making paper.</p>
             <div class="print1-grid">
                 <div class="grid-print1"><img src="prints/print1-1.png" width="100%" alt=""><p class="print-desc"><b>Symmetry Stamp 1 </b><br>16x16</p></div>
@@ -70,7 +70,7 @@
                 <div class="grid-print1"><img src="prints/print1-9.png" width="90%" alt=""><p class="print-desc"><b>Post Card 5 </b><br>3x4</p></div>
                 <div class="grid-print1"><img src="prints/print1-10.png" width="100%" alt=""><p class="print-desc"><b>Post Card 6 </b><br>4x3</p></div>
             </div>
-            <p class="print-project2"><b>Project 2 </b>(2023)</p>
+            <p class="print-project2"><b>Project 2 </b>(2024)</p>
                 <p class="print-project-desc2">Carved a 12x12 block of mounted and unmounted linoleum. I gessored the area that was carved to help make cleaning off the ink easier. I inked up the linoleum using oil based printing inks and a roller. After applying the ink, I rolled it through a printing press. </p>
             <div class="print2-grid">
                 <div class="grid-print2"><img src="prints/print2-1rainbow.png" width="100%" alt="Background is a blend of pink, blue, and purple on white paper. Ontop is a cartoon line-drawing of a habiscus flower (color: black)."><p class="print-desc"><b>Relief Print 1 </b><br>Blend Roll 1</p></div>
@@ -86,6 +86,14 @@
                 <div class="grid-print2"><img src="prints/print2-11custom.png" width="100%" alt="Cartoon line-drawn habiscus flower print (color: peach) is printed ontop a blank white piece of paper."><p class="print-desc"><b>Relief Print 11 </b><br>Custom Color 1</p></div>
                 <div class="grid-print2"><img src="prints/print2-12custom.png" width="100%" alt="Cartoon line-drawn habiscus flower print (color: red) is printed ontop of the bubble print (color: light blue)."><p class="print-desc"><b>Relief Print 12 </b><br>Custom Color 2</p></div>
             </div>
+            <p class="print-project3"><b>Project 3 </b>(2024)</p>
+            <p class="print-project-desc3">Screen Printing - printed a total of four layers.</p>
+        <div class="print3-grid">
+            <div class="grid-print3"><img src="prints/print3_bag1.jpg" width="100%" alt=""><p class="print-desc"><b>Screen Print 1 </b><br>Image screen printed onto a canvas bag</p></div>
+            <div class="grid-print3"><img src="prints/print3_print2.jpg" width="100%" alt="."><p class="print-desc"><b>Screen Print 2 </b><br>Image screen printed onto white printmaking paper</p></div>
+            <div class="grid-print3"><img src="prints/print3_print3.jpg" width="100%" alt=""><p class="print-desc"><b>Screen Print 3 </b><br>Image screen printed onto brown drawing paper</p></div>
+            <div class="grid-print3"><img src="prints/print3_print4.jpg" width="100%" alt=""><p class="print-desc"><b>Screen Print 4 </b><br>Image screen printed onto white printmaking paper</p></div>
+        </div>
         </section>
             <br><br>
 <!-- FOOTER -->
